# engine-crane

./: Cargo.toml  README.md  build.rs
.github/: FUNDING.yml
assetto_corsa/: Cargo.toml
assetto_corsa/src/: error.rs  file_utils.rs  ini_utils.rs  lib.rs  traits.rs
assetto_corsa/src/car/: acd_utils.rs  data_interface.rs  lut_utils.rs  max_speed_est.rs  mod.rs  structs.rs
assetto_corsa/src/car/data/: car_ini_data.rs  mod.rs
assetto_corsa/src/car/data/ai/: gears.rs  mod.rs
assetto_corsa/src/car/data/digital_instruments/: mod.rs  shift_lights.rs
assetto_corsa/src/car/data/drivetrain/: auto_blip.rs  auto_clutch.rs  auto_shifter.rs  clutch.rs  differential.rs  downshift_protection.rs  gearbox.rs  mod.rs  traction.rs
assetto_corsa/src/car/data/electronics/: abs.rs  mod.rs  traction_control.rs
assetto_corsa/src/car/data/engine/: coast.rs  damage.rs  engine_data.rs  fuel_consumption.rs  metadata.rs  mod.rs  power_curve.rs  turbo.rs  turbo_ctrl.rs
assetto_corsa/src/car/data/setup/: gears.rs  mod.rs
assetto_corsa/src/car/data/setup/test_data/gears-per-gear-ratio-file/data/: 2nd.rto  4th.rto
assetto_corsa/src/car/data/setup/test_data/gears-single-ratio-file/data/: ratios.rto  setup.ini
assetto_corsa/src/car/data/setup/test_data/gearset/data/: setup.ini
assetto_corsa/src/car/data/tyres/: mod.rs  tyre_sets.rs
assetto_corsa/src/car/model/: gearing.rs  mod.rs  speed.rs
assetto_corsa/src/car/ui/: car_ui_data.rs  mod.rs  upgrade_icon.rs
assetto_corsa/src/test-data/car-with-turbo-with-ctrls/data/: ctrl_turbo0.ini  drivetrain.ini  engine.ini
automation/: Cargo.toml
automation/src/: car.rs  lib.rs  lua_parse.rs  sandbox.rs  types.rs  validation.rs
beam_ng/: Cargo.toml
beam_ng/src/: jbeam.rs  lib.rs
crate_engine/: Cargo.toml
crate_engine/ccrate_engine_builder/: Cargo.toml
crate_engine/ccrate_engine_builder/src/: lib.rs
crate_engine/src/: lib.rs  metadata.rs  source.rs
crate_engine/src/data/: beam_ng_mod.rs  direct_export.rs  mod.rs
engine-crane-lib/: Cargo.toml
engine-crane-lib/src/: lib.rs
engine-crane-lib/src/data/: mod.rs
engine-crane-lib/src/fabricator/: assetto_corsa.rs  mod.rs
res/: app.rc
src/: assetto_corsa.rs  automation.rs  beam_ng.rs  fabricator.rs  main.rs  steam.rs
src/assetto_corsa/: acd_utils.rs  car.rs  data.rs  drivetrain.rs  engine.rs  error.rs  file_utils.rs  ini_utils.rs  lut_utils.rs  mod.rs  structs.rs  traits.rs
src/assetto_corsa/car/: acd_utils.rs  data_interface.rs  lut_utils.rs  mod.rs  structs.rs
src/assetto_corsa/car/data/: car_ini_data.rs  mod.rs
src/assetto_corsa/car/data/ai/: gears.rs  mod.rs
src/assetto_corsa/car/data/digital_instruments/: mod.rs  shift_lights.rs
src/assetto_corsa/car/data/drivetrain/: auto_blip.rs  auto_clutch.rs  auto_shifter.rs  clutch.rs  differential.rs  downshift_protection.rs  gearbox.rs  mod.rs  traction.rs
src/assetto_corsa/car/data/drivetrain/test_data/six-gears/data/: drivetrain.ini
src/assetto_corsa/car/data/engine/: coast.rs  damage.rs  engine_data.rs  fuel_consumption.rs  metadata.rs  mod.rs  power_curve.rs  turbo.rs  turbo_ctrl.rs
src/assetto_corsa/car/data/setup/: gears.rs  mod.rs
src/assetto_corsa/car/data/setup/test_data/gears-per-gear-ratio-file/data/: 1st.rto  3rd.rto  6th.rto  final.rto  setup.ini
src/assetto_corsa/car/data/setup/test_data/gearset/data/: setup.ini
src/assetto_corsa/car/data/setup/test_data/only-final-drive/data/: setup.ini
src/assetto_corsa/car/data/tyres/: mod.rs  tyre_sets.rs
src/assetto_corsa/car/ui/: car_ui_data.rs  mod.rs
src/assetto_corsa/drivetrain/: auto_blip.rs  auto_clutch.rs  auto_shifter.rs  clutch.rs  differential.rs  downshift_protection.rs  gearbox.rs  mod.rs  traction.rs
src/assetto_corsa/engine/: coast.rs  fuel_consumption.rs  metadata.rs  mod.rs  turbo.rs  turbo_ctrl.rs
src/assetto_corsa/test-data/car-with-turbo-with-ctrls/data/: car.ini
src/assetto_corsa/test-data/car-with-turbo-with-ctrls/ui/: ui_car.json
src/assetto_corsa/test-data/engine-with-turbo-ctrl/: ctrl_turbo1.ini  power.lut
src/automation/: car.rs  mod.rs  sandbox.rs
src/beam_ng/: jbeam.rs  mod.rs
src/data/: crate_engine.rs  mod.rs  validation.rs
src/data/crate_engine/: data.rs  metadata.rs  mod.rs  source.rs
src/fabricator/: assetto_corsa.rs  mod.rs
src/settings/: mod.rs
src/ui/: button.rs  colour.rs  crate_engines.rs  data.rs  edit.rs  elements.rs  image_data.rs  mod.rs  settings.rs  swap.rs
src/ui/edit/: gears.rs  mod.rs
src/ui/edit/fuel_econ/: eff_input.rs  flow_input.rs  helpers.rs  mod.rs
src/ui/edit/gears/: customizable.rs  final_drive.rs  fixed.rs  gear_config.rs  gear_sets.rs  mod.rs  ratio_set.rs
src/utils/: mod.rs
steam/: Cargo.toml
steam/src/: lib.rs
utils/: Cargo.toml
utils/src/: filesystem.rs  hash.rs  lib.rs  numeric.rs  units.rs
