[package]
name = "engine-crane"
version = "0.4.4-alpha"
edition = "2021"
build = "build.rs"
authors = ["zephyrj <zephyrj@protonmail.com>"]
default-run = "engine-crane"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["assetto_corsa", "automation", "beam_ng", "crate_engine", "steam", "utils", "crate_engine/ccrate_engine_builder"]

[workspace.dependencies]
font-kit = "0.13.2"
automation = { path = "automation" }
beam_ng = { path = "beam_ng" }
crate-engine = { path = "crate_engine" }
steam = { path = "steam" }
utils = { path = "utils" }
iced_native = { version = "0.8" }
iced = { version = "0.7", default-features = false, features = ["glow", "default_system_font", "image", "svg"] }
iced_aw = { git = "https://github.com/zephyrj/iced_aw", branch = "tab-custom-styling", default-features = false, features = ["tab_bar", "tabs", "colors"] }
#iced_aw = { version = "0.2", default-features = false, features = ["tab_bar", "tabs", "colors"] }

directories = "5.0.1"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-hjson = { version = "1.1.0", default-features = false }
bincode = "1.3.3"
zip = "2.1.0"
sha2 = "0.10"
toml = "0.8.2"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
whoami = "1.5.2"
thiserror = "1.0.51"
itertools = "0.13.0"
unwrap-infallible = "0.1.5"
sanitize-filename = "0.5.0"
statrs = "0.17.1"


[dependencies]
assetto_corsa = { path = "assetto_corsa" }
automation = { workspace = true }
beam_ng = { workspace = true }
crate-engine = { workspace = true }
steam = { workspace = true }
utils = { workspace = true }

iced_native = { workspace = true }
iced = { workspace = true }
iced_aw = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-hjson = { workspace = true }
bincode = { workspace = true }
zip = { workspace = true }
sha2 = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
directories = { workspace = true }
whoami = { workspace = true }
thiserror = { workspace = true }
itertools = { workspace = true }
sanitize-filename = { workspace = true }
statrs = { workspace = true }
rfd = "0.15.0"
arboard = "3.4.1"
winit = "0.30.5"
config = { version= "0.14", features = ["toml"] }
uuid = { version = "1.10.0", features = ["v4"] }
image = "0.25.2"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[target.'cfg(linux)'.build-dependencies]
async-channel = "2.3.1"

[profile.release]
strip = true
lto = true
panic = "abort"
