[package]
name = "assetto_corsa"
version = "0.2.1-alpha"
edition = "2021"

authors = ["zephyrj <zephyrj@protonmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
steam = { workspace = true }
utils = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
csv = "1.1"
indexmap = "2.0.2"
fs_extra = "1.3.0"
walkdir = "2.3.2"
thiserror = "1.0"
itertools = "0.11.0"
