[package]
name = "automation"
version = "0.2.2-alpha"
edition = "2021"
authors = ["zephyrj <zephyrj@protonmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
steam = { workspace = true }
utils = { workspace = true }
tracing =  { workspace = true }
sha2 = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
directories = { workspace = true }

[dependencies.rusqlite]
version = "0.29.0"
features = ["bundled"]
