[package]
name = "beam_ng"
version = "0.3.2-alpha"
edition = "2021"
authors = ["zephyrj <zephyrj@protonmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os = "windows")'.dependencies]
directories = { workspace = true }
parselnk = "0.1.1"

[dependencies]
steam = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-hjson = { workspace = true }
zip = { workspace = true }
whoami = { workspace = true }
