[package]
name = "crate-engine"
version = "0.3.2-alpha"
edition = "2021"
authors = ["zephyrj <zephyrj@protonmail.com>"]

[dependencies]
automation = { workspace = true }
beam_ng = { workspace = true }
utils = { workspace = true }
tracing =  { workspace = true }
sha2 = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
unwrap-infallible = { workspace = true }
sanitize-filename = { workspace = true }
