[package]
name = "crate-engine"
version = "0.4.5-alpha"
edition = "2021"
authors = ["zephyrj <zephyrj@protonmail.com>"]

[dependencies]
zephyrj-automation-tools = { workspace = true }
zephyrj-beamng-tools = { workspace = true }
utils = { workspace = true }
tracing =  { workspace = true }
sha2 = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
unwrap-infallible = { workspace = true }
sanitize-filename = { workspace = true }
