[package]
name = "ccrate_engine_builder"
version = "0.1.2"
edition = "2021"
authors = ["zephyrj <zephyrj@protonmail.com>"]

[lib]
crate-type = ["cdylib"]

[target.'cfg(target_os = "windows")'.dependencies]
directories = { workspace = true }
zephyrj-automation-tools = { workspace = true }
crate-engine = { workspace = true }
utils = { workspace = true }
unwrap-infallible = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.*"
features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
]
